--- a/tag_cloud/index.html
+++ b/tag_cloud/index.html
@@ -475,8 +475,8 @@
   
     <span class="site-tag">
       <a href="/tag/new-zealand/"
-          style="font-size: 84%">
-              New Zealand (1)
+          style="font-size: 88%">
+              New Zealand (2)
       </a>
     </span>
   
@@ -699,8 +699,8 @@
   
     <span class="site-tag">
       <a href="/tag/activism/"
-          style="font-size: 88%">
-              activism (2)
+          style="font-size: 92%">
+              activism (3)
       </a>
     </span>
   
@@ -727,8 +727,8 @@
   
     <span class="site-tag">
       <a href="/tag/advocacy/"
-          style="font-size: 92%">
-              advocacy (3)
+          style="font-size: 96%">
+              advocacy (4)
       </a>
     </span>
   
@@ -825,8 +825,8 @@
   
     <span class="site-tag">
       <a href="/tag/books/"
-          style="font-size: 140%">
-              books (15)
+          style="font-size: 144%">
+              books (16)
       </a>
     </span>
   
@@ -923,8 +923,8 @@
   
     <span class="site-tag">
       <a href="/tag/communication/"
-          style="font-size: 84%">
-              communication (1)
+          style="font-size: 88%">
+              communication (2)
       </a>
     </span>
   
@@ -946,6 +946,13 @@
       <a href="/tag/conflicts-of-interest/"
           style="font-size: 104%">
               conflicts of interest (6)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/connectedness/"
+          style="font-size: 84%">
+              connectedness (1)
       </a>
     </span>
   
@@ -1014,8 +1021,8 @@
   
     <span class="site-tag">
       <a href="/tag/depression/"
-          style="font-size: 96%">
-              depression (4)
+          style="font-size: 100%">
+              depression (5)
       </a>
     </span>
   
@@ -1121,6 +1128,13 @@
       <a href="/tag/financial-relationships/"
           style="font-size: 88%">
               financial relationships (2)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/food/"
+          style="font-size: 84%">
+              food (1)
       </a>
     </span>
   
@@ -1231,8 +1245,8 @@
   
     <span class="site-tag">
       <a href="/tag/human-rights/"
-          style="font-size: 96%">
-              human rights (4)
+          style="font-size: 100%">
+              human rights (5)
       </a>
     </span>
   
@@ -1296,6 +1310,13 @@
       <a href="/tag/learning/"
           style="font-size: 92%">
               learning (3)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/lifestyles/"
+          style="font-size: 84%">
+              lifestyles (1)
       </a>
     </span>
   
@@ -1371,8 +1392,8 @@
   
     <span class="site-tag">
       <a href="/tag/money/"
-          style="font-size: 84%">
-              money (1)
+          style="font-size: 88%">
+              money (2)
       </a>
     </span>
   
@@ -1616,8 +1637,8 @@
   
     <span class="site-tag">
       <a href="/tag/resources/"
-          style="font-size: 124%">
-              resources (11)
+          style="font-size: 132%">
+              resources (13)
       </a>
     </span>
   
@@ -1646,6 +1667,13 @@
       <a href="/tag/schizophrenia/"
           style="font-size: 84%">
               schizophrenia (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/schools/"
+          style="font-size: 84%">
+              schools (1)
       </a>
     </span>
   
@@ -1755,6 +1783,13 @@
     </span>
   
     <span class="site-tag">
+      <a href="/tag/society/"
+          style="font-size: 84%">
+              society (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
       <a href="/tag/software/"
           style="font-size: 84%">
               software (1)
@@ -1777,8 +1812,8 @@
   
     <span class="site-tag">
       <a href="/tag/stigma/"
-          style="font-size: 88%">
-              stigma (2)
+          style="font-size: 92%">
+              stigma (3)
       </a>
     </span>
   
@@ -1819,8 +1854,8 @@
   
     <span class="site-tag">
       <a href="/tag/suicide-prevention/"
-          style="font-size: 100%">
-              suicide prevention (5)
+          style="font-size: 108%">
+              suicide prevention (7)
       </a>
     </span>
   
@@ -1847,8 +1882,8 @@
   
     <span class="site-tag">
       <a href="/tag/technology/"
-          style="font-size: 120%">
-              technology (10)
+          style="font-size: 124%">
+              technology (11)
       </a>
     </span>
   
@@ -1884,6 +1919,13 @@
       <a href="/tag/trauma/"
           style="font-size: 84%">
               trauma (1)
+      </a>
+    </span>
+  
+    <span class="site-tag">
+      <a href="/tag/travel/"
+          style="font-size: 84%">
+              travel (1)
       </a>
     </span>
   
